[package]
name = "lambda-agent-sandbox"
version = "0.1.0"
edition = "2021"
rust-version = "1.96.0"
license = "MIT"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
lambda_runtime = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
