[package]
name = "lambda-microvm-agent-sandbox"
version = "0.2.0"
edition = "2021"
rust-version = "1.96.0"
license = "MIT"

[[bin]]
name = "sandbox-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
